--- a/back-end/front-end/public/index.html
+++ b/back-end/front-end/public/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>드림루 - 사주 타로</title>
+    <title>DREAM-RU 사주 타로</title>
+    <link rel="icon" href="./Images/dreamru_icon.png" type="image/png" />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
